--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="author" content="Yuri Quejada"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width"/>
   <link rel="stylesheet" type="text/css" href="./estilos.css" media="screen"/>
   <title>Programa de Integración de Tecnologías a la Docencia</title>
 </head>
@@ -14,16 +14,19 @@
         <h1>Programa de Integración de Tecnologías a la Docencia</h1>
       </div>
       <div class="parrafo1">
-        <p>El <em>Programa Integración de Tecnologías a la Docencia</em> ha venido implementando y
-          perfeccionando en el transcurso de muchos años un extenso portafolio de servicios,
-          convirtiéndose en un recurso altamente estandarizado y controlado, orientado a la
-          apropiación y el uso de las herramientas de las Tecnologías de la Información y la Comunicación
-          – TIC en el proceso de enseñanza y de aprendizaje, la investigación y la extensión<sup id="enlaceSup"><a href="#piePagina">1</a></sup>.
+        <p>El <em>Programa Integración de Tecnologías a la Docencia</em>
+          ha venido implementando y perfeccionando en el transcurso de muchos
+          años un extenso portafolio de servicios, convirtiéndose en un recurso
+          altamente estandarizado y controlado, orientado a la apropiación y el
+          uso de las herramientas de las Tecnologías de la Información y la
+          Comunicación – TIC en el proceso de enseñanza y de aprendizaje, la
+          investigación y la extensión<sup><a href="#piePagina">1</a></sup>.
         </p>
-        <p>El <em>Programa Integración de Tecnologías a la Docencia</em> ha dispuesto varias plataformas
-          tecnológicas para apoyar los procesos de docencia, investigación, extensión y gestión
-          administrativa.</p>
-          <p>A continuación, se describe cada una de las plataformas:</p>
+        <p>El <em>Programa Integración de Tecnologías a la Docencia</em> ha
+          dispuesto varias plataformas tecnológicas para apoyar los procesos de
+          docencia, investigación, extensión y gestión administrativa.
+        </p>
+        <p>A continuación, se describe cada una de las plataformas:</p>
       </div>
       <div class="tabla">
         <table>
@@ -56,17 +59,22 @@
       <div class="parrafo2">
         <h2>Líneas de Acción</h2>
         <ul>
-          <li>Formar a la comunidad para el uso y apropiación de las tecnologías de la información.</li>
-          <li>Diseñar escenarios educativos donde maestros y estudiantes asuman nuevos roles.</li>
-          <li>Acompañar a la comunidad universitaria en la integración de tecnologías de la información</li>
+          <li>Formar a la comunidad para el uso y apropiación de las tecnologías
+             de la información.</li>
+          <li>Diseñar escenarios educativos donde maestros y estudiantes asuman
+             nuevos roles.</li>
+          <li>Acompañar a la comunidad universitaria en la integración de
+            tecnologías de la información</li>
           <li>Diseñar y publicar recursos educativos digitales abiertos.</li>
         </ul>
         <p>Para más información puede ir al portal Aprende en Línea:
-          <a id="enlace" href="http://aprendeenlinea.udea.edu.co/portal/">http://aprendeenlinea.udea.edu.co/portal/</a>
+          <a href="http://aprendeenlinea.udea.edu.co/portal/">http://aprendeenlinea.udea.edu.co/portal/</a>
         </p>
         <hr/>
         <ol>
-          <li id= "piePagina">APRENDE EN LÍNEA. Programa de Integración de Tecnologías a la Docencia. [En línea]. http://aprendeenlinea.udea.edu.co/portal/</li>
+          <li id= "piePagina">APRENDE EN LÍNEA. Programa de Integración de
+            Tecnologías a la Docencia. [En línea]. http://aprendeenlinea.udea.edu.co/portal/
+          </li>
         </ol>
       </div>
       </div>
